--- a/tables/picpoker.html
+++ b/tables/picpoker.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="en">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <script src='picpoker.js'></script>
 <style>
     html, body {
