Main gameplay now goes to server

--- a/tables/picpoker.html
+++ b/tables/picpoker.html
@@ -61,13 +61,13 @@
     <tr>
         <td></td>
         <td id='hold draw buttons'>
-            <button onclick="selectCard(event, 0)"></button>
-            <button onclick="selectCard(event, 1)"></button>
-            <button onclick="selectCard(event, 2)"></button>
-            <button onclick="selectCard(event, 3)"></button>
+            <button onclick="selectCard(event, 16)"></button>
+            <button onclick="selectCard(event, 8)"></button>
             <button onclick="selectCard(event, 4)"></button>
+            <button onclick="selectCard(event, 2)"></button>
+            <button onclick="selectCard(event, 1)"></button>
         </td>
     </tr>
 </table>
 <h5>Click on the 5 buttons to hold/draw the corresponding card. (Black=Will be drawn)</h5>
-<button id='next' onclick="proceed(event)">Hold</button><span id='result'></span>
+<button id='next' onclick="proceed(event)"></button><span id='result'></span>
